--- a/thesis/doc/AFIT LaTeX/synapticAnnealingBib.bib
+++ b/thesis/doc/AFIT LaTeX/synapticAnnealingBib.bib
@@ -100,3 +100,95 @@
 	adsurl = {http://adsabs.harvard.edu/abs/1953JChPh..21.1087M},
 	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
+@article{rosenblatt1958perceptron,
+	abstract = {To answer the questions of how information about the physical world is sensed, in what form is information remembered, and how does information retained in memory influence recognition and behavior, a theory is developed for a hypothetical nervous system called a perceptron. The theory serves as a bridge between biophysics and psychology. It is possible to predict learning curves from neurological variables and vice versa. The quantitative statistical approach is fruitful in the understanding of the organization of cognitive systems. 18 references. (PsycINFO Database Record (c) 2012 APA, all rights reserved)},
+	added-at = {2015-01-31T19:27:17.000+0100},
+	address = {US},
+	author = {Rosenblatt, F.},
+	biburl = {http://www.bibsonomy.org/bibtex/2fccddb695dd9e65baa69c97838217cc9/jil},
+	description = {PsycNET - Display Record},
+	doi = {10.1037/h0042519},
+	interhash = {dc0cef9dc06033a04f525efdcde7a660},
+	intrahash = {fccddb695dd9e65baa69c97838217cc9},
+	issn = {19391471},
+	journal = {Psychological Review},
+	keywords = {58 algorithm original perceptron rosenblatt},
+	number = 6,
+	pages = {386--408},
+	publisher = {American Psychological Association},
+	refid = {1959-09865-001},
+	timestamp = {2015-02-06T10:19:31.000+0100},
+	title = {The perceptron: A probabilistic model for information storage and organization in the brain},
+	volume = 65,
+	year = 1958
+}
+
+@book{james1890principles,
+	title={The Principles of Psychology},
+	author={James, W.},
+	number={v. 1},
+	lccn={04003687},
+	series={American science series: Advanced course},
+	url={https://books.google.com/books?id=deOLTt-dD3gC},
+	year={1890},
+	publisher={H. Holt}
+}
+
+
+@book{anderson1988neurocomputing,
+	added-at = {2008-03-11T14:52:34.000+0100},
+	address = {Cambridge, MA},
+	biburl = {http://www.bibsonomy.org/bibtex/2bb08c6951894db63bea32b05ee1f1276/idsia},
+	citeulike-article-id = {2375653},
+	editor = {Anderson, James A. and Rosenfeld, E.},
+	interhash = {cab1ec8b92cf544f561cca6214b8fb00},
+	intrahash = {bb08c6951894db63bea32b05ee1f1276},
+	keywords = {nn},
+	priority = {2},
+	publisher = {MIT Press},
+	timestamp = {2008-03-11T15:05:35.000+0100},
+	title = {Neurocomputing: {F}oundations of Research},
+	url = {http://mitpress.mit.edu/book-home.tcl?isbn=0262510480},
+	year = 1988
+}
+
+
+@article{block1962perceptron,
+	added-at = {2008-03-11T14:52:34.000+0100},
+	author = {Block, H. D.},
+	biburl = {http://www.bibsonomy.org/bibtex/2a28370f53e050acb0e7a46f19d533094/idsia},
+	citeulike-article-id = {2375936},
+	comment = {Reprinted in \npcite{anderson:neurocomputing}},
+	interhash = {601bdb1f53c74dc755fcdfc33e14e67c},
+	intrahash = {a28370f53e050acb0e7a46f19d533094},
+	journal = {Reviews of Modern Physics},
+	keywords = {nn},
+	pages = {123--135},
+	priority = {2},
+	timestamp = {2008-03-11T15:05:19.000+0100},
+	title = {The Perceptron: {A} Model for Brain Functioning},
+	volume = 34,
+	year = 1962
+}
+
+@inproceedings{widrow1960asc,
+	added-at = {2014-08-17T10:39:03.000+0200},
+	address = {New York},
+	author = {Widrow, Bernard and Hoff, Marcian E.},
+	biburl = {http://www.bibsonomy.org/bibtex/24c3b6ae932deb6bb1d04ad76c9c94a69/pygospa},
+	booktitle = {1960 IRE WESCON Convention Record, Part 4},
+	description = {CCNLab BibTeX},
+	interhash = {2ace34c5debd5abc08e714f8ff1030b3},
+	intrahash = {4c3b6ae932deb6bb1d04ad76c9c94a69},
+	keywords = {ann},
+	month = {8},
+	organization = {Institute of Radio Engineers},
+	pages = {96-104},
+	publisher = {Institute of Radio Engineers},
+	timestamp = {2014-08-17T10:42:58.000+0200},
+	title = {Adaptive Switching Circuits},
+	url = {http://www-isl.stanford.edu/~widrow/papers/c1960adaptiveswitching.pdf},
+	year = 1960
+}
