Added test to Minsky paragraph.

--- a/thesis/doc/AFIT LaTeX/usethesis.tex
+++ b/thesis/doc/AFIT LaTeX/usethesis.tex
@@ -293,11 +293,15 @@
 	-1 &\sum_{i=1}^{n} w_{i,j}x_{i} \leq \Theta\\
 	+1 &\sum_{i=1}^{n} w_{i,j}x_{i} > \Theta
 	\end{cases}
-	\end{equation} where \begin{math} y_j \end{math} is the response value of response unit \begin{math} j \end{math}, \begin{math} w_{i,j} \end{math} is the synaptic weight of the connection between activation unit \begin{math} i \end{math} and response unit \begin{math} j \end{math}, \begin{math} x_{i} \end{math} is the activation value of activation unit \begin{math} i \end{math}, and \begin{math} \Theta \end{math} is the threshold value of the perceptron. Block's crucial observation was that the form of the summation in the response determining equation is isomorphic to a hyperplane in an \begin{math}n\end{math}-dimensional space. Thus, in order for the perceptron to achieve perfect classification a hyperplane must be able to separate them in the \begin{math}n\end{math}-dimensional input space. The corollary of this observation it the perceptron convergence theorem. The theorem proves that for some learning rules, if a perfect classification is possible it will be found by the perceptron. Specifically, the class of learning rules which were found effective were those which did not change synaptic weights when a correct classification occurs. While the condition does ensure convergence, it can often result in very slow convergence. Considerably faster guaranteed convergence can be achieved using a error gradient descent learning rule \cite{widrow1960asc}, as described by Widrow and Hoff. 
+	\end{equation} where \begin{math} y_j \end{math} is the response value of response unit \begin{math} j \end{math}, \begin{math} w_{i,j} \end{math} is the synaptic weight of the connection between activation unit \begin{math} i \end{math} and response unit \begin{math} j \end{math}, \begin{math} x_{i} \end{math} is the activation value of activation unit \begin{math} i \end{math}, and \begin{math} \Theta \end{math} is the threshold value of the perceptron. Block's crucial observation was that the form of the summation in the response determining equation is isomorphic to a hyperplane in an \begin{math}n\end{math}-dimensional space. Thus, in order for the perceptron to achieve perfect classification a hyperplane must be able to separate them in the \begin{math}n\end{math}-dimensional input space. The corollary of this observation it the perceptron convergence theorem. The theorem proves that for some learning rules, if a perfect classification is possible it will be found by the perceptron. Specifically, the class of learning rules which were found effective were those which did not change synaptic weights when a correct classification occurs. While the condition does ensure convergence, it often causes very slow convergence, as the synaptic weights change much more slowly when only a small number of samples remain misclassified. Considerably faster guaranteed convergence can be achieved using a error gradient descent learning rule \cite{widrow1960asc}, as described by Widrow and Hoff. 
 	
-	Minsky breaks everything
+	The perceptron model and its extensions generated a great deal of excitement in the field of neural networks. Several 
+	
+	In the final chapter of the \textit{Perceptrons} Minsky and Papert extended thier judgements regarding the ineffectiveness of single-layered perceptrons to all varients of perceptrons, including the multi-layered variety. This statement would turn out to be one of the most impactful of the entire book, as it likely resulted in a chilling of funding for neural network research which lasted for several years. Unfortunately, this judgement was false.
 	
 	then multilayer stuff
+	
+	
 	This, in turn, implies that neural networks can serve as universal function approximaters. (Cybenko)
 	(Kurt Hornik (1991) "Approximation Capabilities of Multilayer Feedforward Networks", Neural Networks, 4(2), 251–257)
 	
