Large addition to historical overview.

--- a/thesis/doc/AFIT LaTeX/synapticAnnealingBib.bib
+++ b/thesis/doc/AFIT LaTeX/synapticAnnealingBib.bib
@@ -38,7 +38,7 @@
 }
 
 @article{piccinini2006,
-	author = {Gualtiero Piccinini},
+	author = {Piccinini, Gualtiero},
 	title = {Computational Explanation in Neuroscience},
 	pages = {343--353},
 	journal = {Synthese},
@@ -192,3 +192,302 @@
 	url = {http://www-isl.stanford.edu/~widrow/papers/c1960adaptiveswitching.pdf},
 	year = 1960
 }
+
+@book{minsky1969perceptrons,
+	added-at = {2013-12-05T10:32:26.000+0100},
+	address = {Cambridge, MA},
+	author = {Minsky, M. and Papert, S.},
+	biburl = {http://www.bibsonomy.org/bibtex/24587aec0472c41d00c38bf3e888304ba/prlz77},
+	interhash = {9ad5b73f68093070d73e54312145eca2},
+	intrahash = {4587aec0472c41d00c38bf3e888304ba},
+	keywords = {critic minsky papert perceptron},
+	publisher = {MIT Press},
+	timestamp = {2013-12-05T10:32:26.000+0100},
+	title = {Perceptrons},
+	year = 1969
+}
+
+
+@article{kohonen1972correlation,
+	author = {Kohonen, Teuvo},
+	title = {Correlation Matrix Memories},
+	journal = {IEEE Trans. Comput.},
+	issue_date = {April 1972},
+	volume = {21},
+	number = {4},
+	month = apr,
+	year = {1972},
+	issn = {0018-9340},
+	pages = {353--359},
+	numpages = {7},
+	url = {http://dx.doi.org/10.1109/TC.1972.5008975},
+	doi = {10.1109/TC.1972.5008975},
+	acmid = {1638957},
+	publisher = {IEEE Computer Society},
+	address = {Washington, DC, USA},
+	keywords = {Associative memory, associative net, associative recall, correlation matrix memory, nonholographic associative memory, pattern recognition},
+} 
+
+@article{anderson1972interactive,
+	added-at = {2008-03-11T14:52:34.000+0100},
+	annote = {Reprinted in \npcite{anderson:neurocomputing}},
+	author = {Anderson, James A.},
+	biburl = {http://www.bibsonomy.org/bibtex/2adc5fa7c7c77d9b04bb12524f6160637/idsia},
+	citeulike-article-id = {2375651},
+	interhash = {c095be69399f0a62f6cae1ff8cb5e2d5},
+	intrahash = {adc5fa7c7c77d9b04bb12524f6160637},
+	journal = {Mathematical Biosciences},
+	keywords = {nn},
+	pages = {197--220},
+	priority = {2},
+	timestamp = {2008-03-11T15:05:35.000+0100},
+	title = {A Simple Neural Network Generating an Interactive Memory},
+	volume = 14,
+	year = 1972
+}
+
+
+@article{vonderMalsburg1973selforganization ,
+	author = {von der Malsburg, Chr.},
+	title =	 {Self-Organization of Orientation Sensitive Cells in the Striate Cortex},
+	{journal =	 kyb},
+	{volume =	 14},
+	{year =	 1973}
+}
+
+
+@article{brodie78limulus,
+	author = {Brodie, S. E. and Knight, B. W. and Ratliff, F.},
+	citeulike-article-id = {304886},
+	journal = {J Gen Physiol},
+	keywords = {bibtex-import},
+	month = aug,
+	number = {2},
+	pages = {129--66},
+	posted-at = {2005-08-26 19:08:23},
+	priority = {0},
+	title = {The response of the {L}imulus retina to moving stimuli: a prediction by {F}ourier synthesis},
+	volume = {72},
+	year = {1978}
+}
+
+@article{hopfield1982neuralnetworks,
+
+	author = {Hopfield, J. J.},
+	biburl = {http://www.bibsonomy.org/bibtex/2a3074d3b833b6b02b6fc991407e86804/mhwombat},
+	groups = {public},
+	issn = {0027-8424},
+	journal = {Proceedings of the National Academy of Sciences of the United States of America},
+	keywords = {seminal network neural},
+	posted-at = {2010-10-28 14:55:59},
+	priority = {2},
+	timestamp = {2015-10-12T13:15:19.000+0200},
+	title = {Neural networks and physical systems with emergent collective computational abilities},
+	url = {http://view.ncbi.nlm.nih.gov/pubmed/6953413]},
+	volume = 79,
+	year = 1982
+}
+
+@incollection{barto1983neuronlike,
+	author = {Barto, Andrew G. and Sutton, Richard S. and Anderson, Charles W.},
+	chapter = {Neuronlike Adaptive Elements That Can Solve Difficult Learning Control Problems},
+	title = {Artificial Neural Networks},
+	editor = {Diederich, Joachim},
+	year = {1990},
+	isbn = {0-8186-2015-3},
+	pages = {81--93},
+	numpages = {13},
+	url = {http://dl.acm.org/citation.cfm?id=104134.104143},
+	acmid = {104143},
+	publisher = {IEEE Press},
+	address = {Piscataway, NJ, USA},
+} 
+
+@book{bryson1969optimalcontrol,
+	added-at = {2014-11-23T18:37:23.000+0100},
+	address = {New York},
+	author = {Bryson, A. E. and Ho, Y. C.},
+	biburl = {http://www.bibsonomy.org/bibtex/27d13cce517ce39632aeabf713bc6fbeb/prlz77},
+	booktitle = {Applied Optimal Control},
+	description = {CCNLab BibTeX},
+	interhash = {3f3142a9345a8acc8c96f47a01da5372},
+	intrahash = {7d13cce517ce39632aeabf713bc6fbeb},
+	keywords = {backpropagation},
+	publisher = {Blaisdell},
+	timestamp = {2014-11-23T18:37:23.000+0100},
+	title = {Applied Optimal Control},
+	year = 1969
+}
+
+@phdthesis{werbos1974beyondregression,
+	added-at = {2008-09-16T23:39:07.000+0200},
+	author = {Werbos, P.},
+	biburl = {http://www.bibsonomy.org/bibtex/2cb68e6abdbcd8c97e57fd86c75d45d4c/brian.mingus},
+	description = {CCNLab BibTeX},
+	interhash = {4165e2708a0468e89f8305f21ee2c711},
+	intrahash = {cb68e6abdbcd8c97e57fd86c75d45d4c},
+	keywords = {nnets},
+	school = {Harvard University},
+	timestamp = {2008-09-16T23:41:26.000+0200},
+	title = {Beyond Regression: New Tools for Prediction and Analysis in the Behavioral
+	Sciences},
+	year = 1974
+}
+
+@techreport{parker1985logic,
+	added-at = {2008-09-16T23:39:07.000+0200},
+	address = {Cambridge, MA},
+	author = {Parker, D. B.},
+	biburl = {http://www.bibsonomy.org/bibtex/23f614ebbe705234336e5d6968cf92fd4/brian.mingus},
+	description = {CCNLab BibTeX},
+	institution = {Center for Computational Research in Economics and Management Science,
+	Massachusetts Institute of Technology},
+	interhash = {291bb7407babd3192f127469f2899a71},
+	intrahash = {3f614ebbe705234336e5d6968cf92fd4},
+	keywords = {nnets},
+	number = {TR-47},
+	timestamp = {2008-09-16T23:40:53.000+0200},
+	title = {Learning Logic},
+	year = 1985
+}
+
+@article{lecun1985,
+	added-at = {2008-03-11T14:52:34.000+0100},
+	author = {Lecun, Y.},
+	biburl = {http://www.bibsonomy.org/bibtex/21a8afd9c03741c65381aad0e921e83fc/idsia},
+	citeulike-article-id = {2381359},
+	interhash = {b3af2c2d3257dc8c11e0f8e643f384c2},
+	intrahash = {1a8afd9c03741c65381aad0e921e83fc},
+	journal = {Proceedings of Cognitiva 85, Paris},
+	keywords = {juergen},
+	pages = {599--604},
+	priority = {2},
+	timestamp = {2008-03-11T14:54:26.000+0100},
+	title = {Une proc\'{e}dure d'apprentissage pour r\'{e}seau \`{a} seuil asym\'{e}trique},
+	year = 1985
+}
+
+
+@inbook{rumelhart1986internal,
+	added-at = {2013-12-08T12:26:18.000+0100},
+	author = {Rumelhart, D.E. and Hinton, G.E. and Williams, R.J.},
+	biburl = {http://www.bibsonomy.org/bibtex/22292f46489962ae38d4223074bc00f68/prlz77},
+	crossref = {Rum86},
+	interhash = {dd8485b30b80c7f35263bcb21ed81c1f},
+	intrahash = {2292f46489962ae38d4223074bc00f68},
+	keywords = {Error Internal Learning Propagation Representations by},
+	timestamp = {2013-12-08T12:26:18.000+0100},
+	title = {Learning Internal Representations by Error Propagation},
+	year = 1986
+}
+
+@ARTICLE{das2005qakcs,
+	author = {{Das}, A. and {Chakrabarti}, B.~K. and {Stinchcombe}, R.~B.},
+	title = "{Quantum annealing in a kinetically constrained system}",
+	journal = {\pre},
+	eprint = {cond-mat/0502167},
+	keywords = {Numerical optimization, Tunneling traversal time quantum Zeno dynamics, Quantum Monte Carlo methods, Other topics in statistical physics thermodynamics and nonlinear dynamical systems},
+	year = 2005,
+	month = aug,
+	volume = 72,
+	number = 2,
+	eid = {026701},
+	pages = {026701},
+	doi = {10.1103/PhysRevE.72.026701},
+	adsurl = {http://adsabs.harvard.edu/abs/2005PhRvE..72b6701D},
+	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@article{roland2002quatumsearch,
+	title = {Quantum search by local adiabatic evolution},
+	author = {Roland, J\'er\'emie and Cerf, Nicolas J.},
+	journal = {Phys. Rev. A},
+	volume = {65},
+	issue = {4},
+	pages = {042308},
+	numpages = {6},
+	year = {2002},
+	month = {Mar},
+	publisher = {American Physical Society},
+	doi = {10.1103/PhysRevA.65.042308},
+	url = {http://link.aps.org/doi/10.1103/PhysRevA.65.042308}
+}
+
+
+@ARTICLE{mukherjee2015multivariatesearchqa,
+	author = {{Mukherjee}, S. and {Chakrabarti}, B.~K.},
+	title = "{Multivariable optimization: Quantum annealing and computation}",
+	journal = {European Physical Journal Special Topics},
+	archivePrefix = "arXiv",
+	eprint = {1408.3262},
+	primaryClass = "cond-mat.stat-mech",
+	year = 2015,
+	month = feb,
+	volume = 224,
+	pages = {17},
+	doi = {10.1140/epjst/e2015-02339-y},
+	adsurl = {http://adsabs.harvard.edu/abs/2015EPJST.224...17M},
+	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{lecchinivisintini2007sacontinuousgaruntees,
+	author = {{Lecchini-Visintini}, A. and {Lygeros}, J. and {Maciejowski}, J.
+	},
+	title = "{Simulated Annealing: Rigorous finite-time guarantees for optimization on continuous domains}",
+	journal = {ArXiv e-prints},
+	archivePrefix = "arXiv",
+	eprint = {0709.2989},
+	primaryClass = "stat.ML",
+	keywords = {Statistics - Machine Learning},
+	year = 2007,
+	month = sep,
+	adsurl = {http://adsabs.harvard.edu/abs/2007arXiv0709.2989L},
+	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{corana1987minimizingmultimodal,
+	author = {Corana, A. and Marchesi, M. and Martini, C. and Ridella, S.},
+	title = {Minimizing Multimodal Functions of Continuous Variables with the \&Ldquo;Simulated Annealing\&Rdquo; algorithmCorrigenda for This Article is Available Here},
+	journal = {ACM Trans. Math. Softw.},
+	issue_date = {Sept. 1987},
+	volume = {13},
+	number = {3},
+	month = sep,
+	year = {1987},
+	issn = {0098-3500},
+	pages = {262--280},
+	numpages = {19},
+	url = {http://doi.acm.org/10.1145/29380.29864},
+	doi = {10.1145/29380.29864},
+	acmid = {29864},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+} 
+
+@ARTICLE{goffe1994globaloptimization,
+	author = {William L. Goffe and Gary D. Ferrier and John Rogers},
+	title = {Global Optimization of Statistical Functions with Simulated Annealing},
+	journal = {Journal of Econometrics},
+	year = {1994},
+	volume = {60},
+	pages = {65--99}
+}
+
+@article{cybenko1989approxsuperposition,
+	year={1989},
+	issn={0932-4194},
+	journal={Mathematics of Control, Signals and Systems},
+	volume={2},
+	number={4},
+	doi={10.1007/BF02551274},
+	title={Approximation by superpositions of a sigmoidal function},
+	url={http://dx.doi.org/10.1007/BF02551274},
+	publisher={Springer-Verlag},
+	keywords={Neural networks; Approximation; Completeness},
+	author={Cybenko, G.},
+	pages={303-314},
+	language={English}
+}
+
